Created Admin and user module newly and also created add templates and list of tepmlates